final commit for redpanda project

--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,7 @@
   
   /*About Us*/
   .section-about {
-    background-image: url(../img/blurimage.jpg);
+    background-image: url(https://i.imgur.com/YBz6uwP.jpg);
     background-position: center;
     height: 100vh;
     min-height: 600px;
