--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,3 @@
-.primary-overlay {
-  background: rgba(158, 19, 26, 0.301);
-  /* background: rgba(201, 130, 166, 0.486); */
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
 
 #home {
   background-color: #f3f4f9;
@@ -70,7 +60,7 @@
 
 /*About Us*/
 .section-about {
-  background-image: url(../img/blurimage.jpg);
+  background-image: url(https://i.imgur.com/lXdRuST.jpg);
   background-position: center;
   height: 100vh;
   min-height: 600px;
@@ -108,7 +98,7 @@
 }
 
 .section-contact .main-text{
-  background-image: url(../img/image2.jpg);
+  background-image: url(https://i.imgur.com/Rv28fOI.jpg);
   background-color: grey;
   width: 50px;
   height: 550px;
@@ -218,7 +208,7 @@ body, html {
 
 .stocktonplace {
   /* The image used */
-  background-image: url('../img/stockton.jpg');
+  background-image: url(https://i.imgur.com/Lha7ggn.jpg);
   height: 100%; 
   z-index: -1;
 
@@ -231,7 +221,7 @@ body, html {
 
 .parallax {
   /* The image used */
-  background-image: url('../img/wolf.jpg');
+  background-image: url(https://i.imgur.com/hgEqM6k.jpg);
   background-color: rgb(56, 50, 50);
   height: 50%; 
   
@@ -251,7 +241,7 @@ body, html {
 }
 
 .stockonplace2{
-  background-image: url(../img/stockton2.jpg);
+  background-image: url(https://cdnimg.webstaurantstore.com/images/articles/359/blog-chefs-header.jpg);
   min-height: 400px;
 }
 
@@ -286,7 +276,7 @@ body, html {
 
 .stocktonplace3 {
   /* The image used */
-  background-image: url('../img/image1.jpg');
+  background-image: url(https://i.imgur.com/hVXaE54.jpg);
   height: 100%; 
  
 
@@ -298,7 +288,7 @@ body, html {
 }
 
 .stockonplace4{
-  background-image: url(../img/stockton2.jpg);
+  /* background-image: url(../img/stockton2.jpg); */
   min-height: 400px;
 }
 
@@ -434,49 +424,49 @@ body, html {
   background-color: red;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/buttersoup.jpeg)
+  background-image: url(https://i.imgur.com/Q8XyYHG.jpg)
 }
 
 .roasted {
   background-color: red;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/Roasted.jpg)
+  background-image: url(https://i.imgur.com/NfYsDet.jpg)
 }
 
 .charred {
   background-color: red;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/charred.jpg)
+  background-image: url(https://i.imgur.com/91xuFGn.jpg)
 }
 
 .belly {
   background-color: red;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/belly.jpg)
+  background-image: url(https://i.imgur.com/lMQActD.jpg)
 }
 
 .sole {
   background-color: red;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/sole.jpg)
+  background-image: url(https://i.imgur.com/Kd5QgaM.jpg)
 }
 
 .sole {
   background-color: red;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/prime.jpg)
+  background-image: url(https://i.imgur.com/KpuD7Nc.jpg)
 }
 
 .Smores {
   background-color: red;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/Smores.jpg)
+  background-image: url(https://i.imgur.com/D902hxH.jpg)
 }
 
 .Toffee {
@@ -484,7 +474,7 @@ body, html {
   color: white;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/Toffee.jpg)
+  background-image: url(https://sugarspunrun.com/wp-content/uploads/2018/11/Toffee-recipe-1-of-1-5-500x500.jpg)
 }
 
 .honey {
@@ -492,7 +482,7 @@ body, html {
   color: white;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/honey.jpg)
+  background-image: url(https://i.imgur.com/ClJzo0L.jpg)
 }
 
 .lemon {
@@ -500,7 +490,7 @@ body, html {
   color: white;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/lemon.jpg)
+  background-image: url(https://i.imgur.com/hZdFs3U.jpg)
 }
 
 .chocolate {
@@ -508,7 +498,7 @@ body, html {
   color: white;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/chocolate.jpg)
+  background-image: url(https://i.imgur.com/ERmuilp.jpg)
 }
 
 .cheesecake {
@@ -516,7 +506,7 @@ body, html {
   color: white;
   z-index: 1;
   height: 50%;
-  background-image: url(../img/cheesecake.jpg)
+  background-image: url(https://i.imgur.com/TJPgX4n.jpg)
 }
 
 
@@ -524,3 +514,4 @@ body, html {
   height: 500px;
   width: 500px;
 }
+
